<resources>
    <string name="app_name">HunterNet</string>
    <string name="emailtext" translatable="false">Email</string>
    <string name="passwordtext">Password</string>
    <string name="buttonlogin">Login</string>
    <string name="registerTextView">Register</string>
    <string name="forgotTextView">Forgot password</string>
    <string name="usernameTextInput">Username</string>
    <string name="registerButton">Register</string>
    <string name="resulttextView">Result</string>
    <string name="signOutMenu">Sign out</string>
</resources>
