<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.simbirsoft.efa.hunternet.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailtext"
            android:text="@string/emailtext"
            tools:text="@string/emailtext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordtext"
            android:text="@string/passwordtext"
            tools:text="@string/passwordtext" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:text="@string/buttonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:text="@string/buttonlogin" />

    <TextView
        android:id="@+id/RegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/registerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/ForgotTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgotTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
</android.support.constraint.ConstraintLayout>
